refactor(notifications): add a panel at the top of page

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -12,6 +12,9 @@
 
     <div class="container-fluid">
       <div class="row controls">
+        <div notifications-panel
+             class="cols notifications-panel page-notifications"></div>
+
         <div class="cols col-sm-2 task-piles"
              ng-controller="pileCreateCtrl">
           <div class="inner">
@@ -23,6 +26,7 @@
               </a>
             </h5>
           </div>
+
         </div>
 
         <div class="cols col-sm-4 current-pile">
@@ -65,3 +69,4 @@
         </div>
       </div>
     </div>
+
