--- a/client/webapp/src/main/webapp/develop/invoice/assign-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/assign-approver.html
@@ -1,37 +1,48 @@
-<!-- # CE - src/main/webapp/develop/invoice/assign-approver.html -->
-<strong>Who should approve that damn thing?</strong>
+<form role="form">
+  <div class="form-group">
+    <label for="approver-field">Approver</label>
+    <input type="text"
+           required
+           id="approver-field"
+           class="form-control"
+           cam-variable-name="approver"
+           cam-variable-type="String"
+           placeholder="{{ 'USER_NAME' | translate }}"
+           ng-model="approver">
+    <div class="help-block">Come on <strong>{{ approver }}</strong></div>
+  </div>
 
-<script form-script type="text/form-script">
 
-  // may use $scope to bind against the current scope directly
-  // or use #inject (see below) to obtain application services
+  <div class="form-group">
+    <label for="randomString-field">Something random</label>
+    <input type="text"
+           required
+           id="randomString-field"
+           class="form-control"
+           cam-variable-name="randomString"
+           cam-variable-type="String"
+           ng-model="randomString">
+    <div class="help-block">Come on <strong>{{ randomString }}</strong></div>
+  </div>
 
-  inject([ '$scope', '$http', function($scope, $http) {
 
-    $scope.$watch('variablesForm.approver.$valid', function(newValue) {
-      console.log('Form', newValue ? 'valid' : 'invalid');
-    });
+  <div class="form-group">
+    <label for="select-field">A choice</label>
+    <select id="select-field"
+            class="form-control"
+            cam-variable-name="select"
+            cam-variable-type="String"
+            ng-model="select">
+      <option value="">[{{ 'NONE' | translate }}]</option>
+      <option value="a">Value A</option>
+      <option value="b">Value B</option>
+    </select>
 
-    $scope.inputChanged = function() {
-      var value = $scope.variablesForm.approver.$modelValue;
-      var allowed = [ "demo", "john", "mary", "peter" ];
+    <div ng-if="selected"
+         class="help-block">
+      You selected <strong>{{ select }}</strong>
+    </div>
+  </div>
 
-      $scope.variablesForm.approver.$setValidity("name", allowed.indexOf(value) != -1);
-    };
-  }]);
-</script>
 
-<input form-field type="string" required
-       ng-change="inputChanged()" name="approver" />
-
-<p style="color: red" ng-if="variablesForm.approver.$invalid">
-  Not a valid user!
-</p>
-
-<p>
-  <small>
-    * must be a valid user, i.e. one of
-    <code>demo, john, mary, peter</code>
-  </small>
-</p>
-<!-- / CE - src/main/webapp/develop/invoice/assign-approver.html -->
+</form>
