--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -22,8 +22,11 @@
       </div>
 
       <div class="names">
-        <h2>{{ task.name }}</h2>
-        <h4>{{ task.processDefinitionName }}</h4>
+        <h2 class="task">{{ task.name }}</h2>
+        <h4 class="process-definition"
+            ng-class="{suspended: task._embedded.processDefinition}">
+          {{ task._embedded.processDefinition.name || task._embedded.processDefinition.key }}
+        </h4>
       </div>
 
       <div cam-tasklist-task-meta
