refactor(task): integrate the form of a task

--- a/client/client/scripts/task/directives/cam-tasklist-task-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form.html
@@ -1,2 +1,12 @@
-...
-<pre>{{ task | json}}</pre>
+<div class="form-container"></div>
+<div ng-if="_camForm"
+     class="form-actions">
+<!--
+    <button class="btn btn-xs btn-link"
+            type="button">Cancel</button>
+-->
+    <button class="btn btn-primary"
+            type="submit"
+            ng-click="completeTask()"
+            translate="COMPLETE">Complete</button>
+</div>
