fix(example): add ng-model directives to the example forms

--- a/client/webapp/src/main/webapp/develop/invoice/invoice-approve.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-approve.html
@@ -8,6 +8,7 @@
     <div class="controls">
       <input cam-variable-name="creditor"
              type="text"
+             ng-model="creditor"
              name="creditor"
              readonly="true"
              class="form-control" />
@@ -18,6 +19,7 @@
     <div class="controls">
       <input cam-variable-name="amount"
              type="text"
+             ng-model="amount"
              name="amount"
              readonly="true"
              class="form-control" />
@@ -28,6 +30,7 @@
     <div class="controls">
       <input cam-variable-name="invoiceNumber"
              type="text"
+             ng-model="invoiceNumber"
              name="invoiceNumber"
              readonly="true"
              class="form-control" />
@@ -39,6 +42,7 @@
       <input cam-variable-name="approved"
              cam-variable-type="Boolean"
              type="text"
+             ng-model="approved"
              name="approved"
              class="form-control" />
 
