--- a/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
@@ -9,6 +9,7 @@
       <input cam-variable-name="creditor"
              type="text"
              name="creditor"
+             ng-model="creditor"
              readonly="true"
              class="form-control" />
     </div>
@@ -19,6 +20,7 @@
       <input cam-variable-name="amount"
              type="text"
              name="amount"
+             ng-model="amount"
              readonly="true"
              class="form-control" />
     </div>
@@ -29,6 +31,7 @@
       <input cam-variable-name="invoiceNumber"
              type="text"
              name="invoiceNumber"
+             ng-model="invoiceNumber"
              readonly="true"
              class="form-control" />
     </div>
@@ -39,6 +42,7 @@
       <input cam-variable-name="approver"
              type="text"
              name="approved"
+             ng-model="approved"
              readonly="true"
              class="form-control"></input>
              <p></p>
