--- a/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
@@ -12,6 +12,7 @@
       <input cam-variable-name="creditor"
              type="text"
              name="creditor"
+             ng-model="creditor"
              class="form-control" />
     </div>
   </div>
@@ -21,6 +22,7 @@
       <input cam-variable-name="amount"
              type="text"
              name="amount"
+             ng-model="amount"
              class="form-control" />
     </div>
   </div>
@@ -30,6 +32,7 @@
       <input cam-variable-name="invoiceNumber"
              type="text"
              name="invoiceNumber"
+             ng-model="invoiceNumber"
              class="form-control" />
     </div>
   </div>
@@ -40,6 +43,7 @@
              cam-variable-type="Boolean"
              type="text"
              name="clarified"
+             ng-model="clarified"
              class="form-control" />
 
       (i.e. true, false)
