--- a/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
@@ -8,6 +8,7 @@
            for="creditor">Creditor</label>
     <div class="controls">
       <input cam-variable-name="creditor"
+             ng-model="creditor"
              cam-variable-type="String"
              id="creditor"
              class="form-control"
@@ -23,6 +24,7 @@
            for="amount">Amount</label>
     <div class="controls">
       <input cam-variable-name="amount"
+             ng-model="amount"
              cam-variable-type="String"
              id="amount"
              class="form-control"
@@ -38,6 +40,7 @@
            for="invoiceNumber">Invoice Number</label>
     <div class="controls">
       <input cam-variable-name="invoiceNumber"
+             ng-model="invoiceNumber"
              cam-variable-type="String"
              id="invoiceNumber"
              class="form-control"
