--- a/client/webapp/src/main/webapp/develop/invoice/approve.html
+++ b/client/webapp/src/main/webapp/develop/invoice/approve.html
@@ -1,3 +1,4 @@
-<!-- # CE - src/main/webapp/develop/invoice/approve.html -->
-Yo think its good? <input form-field type="boolean" name="approved" />
-<!-- / CE - src/main/webapp/develop/invoice/approve.html -->
+Yo think its good? <input form-field
+                          type="boolean"
+                          name="approved"
+                          ng-model="approved" />
