--- a/client/webapp/src/main/webapp/develop/invoice/invoice-assign-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-assign-approver.html
@@ -9,6 +9,7 @@
       <input cam-variable-name="creditor"
              type="text"
              name="creditor"
+             ng-model="creditor"
              readonly="true"
              class="form-control" />
     </div>
@@ -19,6 +20,7 @@
       <input cam-variable-name="amount"
              type="text"
              name="amount"
+             ng-model="amount"
              readonly="true"
              class="form-control" />
     </div>
@@ -29,6 +31,7 @@
       <input cam-variable-name="invoiceNumber"
              type="text"
              name="invoiceNumber"
+             ng-model="invoiceNumber"
              readonly="true"
              class="form-control" />
     </div>
@@ -40,6 +43,7 @@
              cam-variable-type="String"
              type="text"
              name="approver"
+             ng-model="approver"
              class="form-control"
              required />
 
