--- a/client/webapp/src/main/webapp/develop/invoice/select-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/select-approver.html
@@ -4,7 +4,7 @@
 <p>
   <label for="selectString" class="control-label">Choose String</label>
 
-  <select id="selectString" form-field type="string" name="approver" required>
+  <select id="selectString" form-field type="string" name="approver" ng-model="approver" required>
     <option value="demo">Demo</option>
     <option value="john">John</option>
     <option value="mary">Mary</option>
@@ -15,7 +15,7 @@
 <p>
   <label for="choseNumber" class="control-label">How many?</label>
 
-  <select id="choseNumber" form-field type="number" name="selectedNumber" required>
+  <select id="choseNumber" form-field type="number" name="selectedNumber" ng-model="selectedNumber" required>
     <option value="1">One</option>
     <option value="2">Two</option>
     <option value="3">Three</option>
@@ -26,7 +26,7 @@
 <p>
   <label for="choseBoolean" class="control-label">Are you in?</label>
 
-  <select id="choseBoolean" form-field type="boolean" name="choseBoolean">
+  <select id="choseBoolean" form-field type="boolean" name="choseBoolean" ng-model="choseBoolean">
     <option value="true">Bring it on!</option>
     <option value="false">No way man!</option>
   </select>
@@ -35,14 +35,14 @@
 <p>
   <label for="chooseFromList" class="control-label">List options provided by backend</label>
 
-  <select id="chooseFromList" form-field form-values="namesList" type="string" name="selectedName">
+  <select id="chooseFromList" form-field form-values="namesList" type="string" name="selectedName" ng-model="selectedName">
   </select>
 </p>
 
 <p>
   <label for="chooseFromMap" class="control-label">Map options provided by backend</label>
 
-  <select id="chooseFromMap" form-field form-values="namesMap" type="string" name="selectedName">
+  <select id="chooseFromMap" form-field form-values="namesMap" type="string" name="selectedName" ng-model="selectedName">
     <option value="someOneElse">BOOOOM!</option>
   </select>
 </p>
@@ -52,17 +52,17 @@
 
 <p>
   <label for="numberInput" class="control-label">Input your age</label>
-  <input id="numberInput" form-field type="number" required name="numberInput">
+  <input id="numberInput" form-field type="number" required name="numberInput" ng-model="numberInput">
 </p>
 
 <p>
   <label for="booleanInput" class="control-label">Are you in?</label>
-  <input id="booleanInput" form-field type="boolean" required name="booleanInput">
+  <input id="booleanInput" form-field type="boolean" required name="booleanInput" ng-model="booleanInput">
 </p>
 
 <p>
   <label for="dateInput" class="control-label">When is it going down?</label>
-  <input id="dateInput" form-field type="date" required name="selectedDate" > yyyy-MM-dd
+  <input id="dateInput" form-field type="date" required name="selectedDate" ng-model="selectedDate" > yyyy-MM-dd
 </p>
 
 <p><strong>Now let's go down to radio button hell.</strong></p>
@@ -70,15 +70,15 @@
 <p>
 
 <label class="radio">
-  <input id="radio1-mary" form-field type="radio" name="selectedName" value="mary">
+  <input id="radio1-mary" form-field type="radio" name="selectedName" ng-model="selectedName" value="mary">
   Mary
 </label>
 <label class="radio">
-  <input id="radio1-john" form-field type="radio" name="selectedName" value="john">
+  <input id="radio1-john" form-field type="radio" name="selectedName" ng-model="selectedName" value="john">
   Jonny Boy
 </label>
 <label class="radio">
-  <input id="radio1-peter" form-field type="radio" name="selectedName" value="peter">
+  <input id="radio1-peter" form-field type="radio" name="selectedName" ng-model="selectedName" value="peter">
   Peter Meter
 </label>
 
@@ -87,7 +87,7 @@
 <p><strong>Textarea Galore!</strong></p>
 
 <p>
-<textarea form-field name="selectedName"></textarea>
+<textarea form-field name="selectedName" ng-model="selectedName"></textarea>
 </p>
 
 Test
