fix(favicon): set the path to the favicon
and add the apple touch icons as well

related to: #CAM-2595

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -24,10 +24,10 @@
   <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+  <link rel="shortcut icon" href="$APP_ROOT/app/tasklist/favicon.ico">
+  <link rel="apple-touch-icon" href="$APP_ROOT/app/tasklist/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="$APP_ROOT/app/tasklist/images/apple-touch-icon-114x114.png">
 </head>
 
 <body>
