improve(sorting): allow setting the sorting from outside the widget

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -39,7 +39,9 @@
               </div>
               <div class="col-xs-6 dropdown sorting">
               -->
-                <div cam-sorting-choices></div>
+                <div cam-sorting-choices
+                     by="priority"
+                     order="desc"></div>
               </div>
             </div>
           </div>
