--- a/client/client/scripts/task/directives/cam-tasklist-task-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form.html
@@ -1,6 +1,5 @@
 <div class="form-container"></div>
-<div ng-if="_camForm"
-     class="form-actions">
+<div class="form-actions">
 <!--
     <button class="btn btn-xs btn-link"
             type="button">Cancel</button>
