--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -5,27 +5,27 @@
 </div>
 
 <div ng-hide="loading"
-     ng-repeat="(delta, pile) in piles"
-     class="task-pile-wrapper"
-     ng-class="{active: pile.id === focusedId}"
-     style="z-index: {{ ((piles.length + 10) - delta) }};">
+     ng-repeat="(delta, filter) in filters"
+     class="task-filter-wrapper"
+     ng-class="{active: filter.id === focusedId}"
+     style="z-index: {{ ((filters.length + 10) - delta) }};">
 
-  <div class="task-pile"
-       style="background-color: {{ pile.color }}">
+  <div class="task-filter"
+       style="background-color: {{ filter.color }}">
 
     <h4 class="name"
-        ng-click="focus(pile)">{{ pile.name }}</h4>
+        ng-click="focus(filter)">{{ filter.name }}</h4>
 
     <div class="info"
-         style="background-color: {{ pile.color }}">
-      <div ng-if="pile.description"
+         style="background-color: {{ filter.color }}">
+      <div ng-if="filter.description"
            class="description">
-        {{ pile.description }}
+        {{ filter.description }}
       </div>
 
       <ul class="filters list-unstyled">
         <li ng-click="edit()"
-            ng-repeat="filter in pile.filters">
+            ng-repeat="filter in filter.filters">
           <span class="key">{{ filter.key }}</span>:
 
           <span class="operator"
