improve(examples): work on example forms styling

--- a/client/webapp/src/main/webapp/develop/invoice/invoice-approve.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-approve.html
@@ -1,7 +1,11 @@
 <form class="form-horizontal"
       role="form">
 
-  <div class="panel panel-info">Who should approve this invoice?</div>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Who should approve this invoice?
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label">Creditor</label>
