--- a/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
@@ -1,9 +1,11 @@
 <form class="form-horizontal"
       role="form">
 
-  <div class="panel panel-info">
-    <strong>Please clarify:</strong>
-    This invoice needs clarification and could not be approved due to missing data.
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <strong>Please clarify:</strong>
+      This invoice needs clarification and could not be approved due to missing data.
+    </div>
   </div>
 
   <div class="control-group">
