--- a/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
@@ -1,7 +1,11 @@
 <form role="form"
       class="form-horizontal">
 
-  <div class="panel panel-info">Please fill in the details for the invoice you received</div>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      Please fill in the details for the invoice you received
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label"
