--- a/client/webapp/src/main/webapp/develop/invoice/select-approver.html
+++ b/client/webapp/src/main/webapp/develop/invoice/select-approver.html
@@ -1,5 +1,9 @@
 <!-- # CE - src/main/webapp/develop/invoice/select-approver.html -->
-<p><strong>Welcome to select box paradise!</strong></p>
+<div class="panel panel-default">
+    <div class="panel-body">
+      Welcome to select box paradise!
+    </div>
+  </div>
 
 <p>
   <label for="selectString" class="control-label">Choose String</label>
