--- a/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
@@ -1,7 +1,11 @@
 <form class="form-horizontal"
       role="form">
 
-  <div class="panel panel-info">You can prepare the bank transfer for the following invoice</div>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      You can prepare the bank transfer for the following invoice
+    </div>
+  </div>
 
   <div class="control-group">
     <label class="control-label">Creditor</label>
