refactor(modals): use Close instead of Abort

--- a/client/client/scripts/process/start.html
+++ b/client/client/scripts/process/start.html
@@ -159,7 +159,7 @@
           <button class="btn btn-xs btn-link"
                   type="button"
                   ng-click="close()"
-                  translate="CANCEL">Cancel</button>
+                  translate="CLOSE">Close</button>
         </div>
       </div>
     </div>
