--- a/client/client/scripts/task/directives/cam-tasklist-task-form-modal.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form-modal.html
@@ -17,7 +17,7 @@
     <button class="btn btn-link"
             type="submit"
             ng-click="exitFullscreen()"
-            translate="ABORT">Abort</button>
+            translate="CLOSE">Close</button>
 
     <button class="btn btn-primary"
             type="submit"
